# valanostr

./: LICENSE  README.md  check_deps.sh  meson.build
.github/workflows/: ci.yml
src/: nip19.vala  nostr.vala
tests/: test_nostr.vala
vapi/: secp256k1.vapi
